--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ ed25519-dalek = { version = "2", features = ["rand_core"] }
 rand = "0.8"
 uuid = { version = "1", features = ["v4", "serde"] }
 hex = "0.4.3"
-rocksdb = "0.24.0"
+sled = "0.34"
 thiserror = "2.0.18"
 serde_json = "1"
